--- a/content/3-open-questions/15.md
+++ b/content/3-open-questions/15.md
@@ -50,7 +50,7 @@ Similarly, to predict biaxial behavior of woven fabric, the model of the weave n
 
 ## Dealing with Complexity
 
-In what ways is it possible to complement the existing research? One approach is epidemiological studies of collections and promotion of documentation protocols that include canvas weave pattern and count, fiber type, and duty/colorman stamps. This information not only helps in the identification of the date and source of the canvas but is also invaluable for understanding the artist’s intent and the provenance of artists materials ({% cite 'Johnson et al. 2010' %}; {% cite 'Murillo-Fuentes and Alba 2018' %}). It is also important for conservation, as the weave structure still influences the overall response of a painting, whatever its age. Combined with consistent materials characterization, such information may allow further insights to be gained into the mechanical and hydromechanical behavior of real paintings.
+In what ways is it possible to complement the existing research? One approach is epidemiological studies of collections and promotion of documentation protocols that include canvas weave pattern and count, fiber type, and duty/colorman stamps. This information not only helps in the identification of the date and source of the canvas but also is invaluable for understanding the artist’s intent and the provenance of artists materials ({% cite 'Johnson et al. 2010' %}; {% cite 'Murillo-Fuentes and Alba 2018' %}). It is also important for conservation, as the weave structure still influences the overall response of a painting, whatever its age. Combined with consistent materials characterization, such information may allow further insights to be gained into the mechanical and hydromechanical behavior of real paintings.
 
 While it is not always possible to be historically accurate at every level of the canvas structure, weave, painting, and lining reconstructions allow for repeatability and for endless combinations to be experimentally tested and trends in behavior to be established ({% cite 'Daly Hartin et al. 2011' %}; also see “Moisture Response of Linings” and “Reconstructing Weaves” below). Lined paintings, as well as modern and contemporary use of “canvas”—wherein if a material exists, an artist will use it, and unconventionally—require an understanding of geometry, construction, and potentially the properties of many different materials. Reconstructions play a crucial role in understanding these elements.
 
