--- a/content/3-open-questions/16.md
+++ b/content/3-open-questions/16.md
@@ -7,23 +7,23 @@ order: 160
 contributor:
   - first_name: "Theresa A."
     last_name: "Bräunig"
-    title:
-    affiliation: "Old National Gallery, Berlin, Germany"
+    title: "Conservator"
+    affiliation: "Old National Gallery, Berlin"
     sort_as: "1"
   - first_name: "Anna"
     last_name: "von Reden"
     title: "Professor"
-    affiliation: "Stuttgart State Academy of Art and Design, Germany"
+    affiliation: "Stuttgart State Academy of Art and Design"
     sort_as: "2"
   - first_name: "Dirk A."
     last_name: "Lichtblau"
-    title:
-    affiliation: "Lichtblau e.K., Dresden, Germany"
+    title: "Director"
+    affiliation: "Lichtblau e.K., Dresden"
     sort_as: "3"
   - first_name: "Christoph"
     last_name: "Herm"
     title: "Professor"
-    affiliation: "Dresden University of Fine Arts, Germany"
+    affiliation: "Dresden University of Fine Arts"
     sort_as: "4"
 abstract: "This study presents a novel technique to determine the tensile strength of single flax yarn of canvas, using zero-span strength analysis. The technique was applied to both artificially aged fabric and naturally aged canvas from historical artworks, yielding reproducible and representative results. Subsequently, the degree of polymerization of the cellulose was determined by capillary viscometry. A linear correlation could be shown between the degree of cellulose polymerization obtained from capillary viscometry and the tensile strength obtained from zero-span tensile strength measurements. These results demonstrate the value of this technique, which is more straightforward than capillary viscometry and requires significantly smaller samples. This approach offers great potential for determining the mechanical properties of an original canvas and for supporting the decision-making process about conservation treatments."
 ---
@@ -32,17 +32,17 @@ abstract: "This study presents a novel technique to determine the tensile streng
 
 In order to make educated decisions about the ability to transport paintings and the potential need for an appropriate conservation treatment, it is crucial to know the mechanical strength of a canvas. However, methods to measure this and related parameters are scarce. Even today, the assessment of original canvas is often based only on its optical appearance, such as browning and yellowing, and pH value. However, these parameters are not directly related to age and mechanical properties.
 
-Flax is frequently used for the canvases of historical paintings. It is a natural fiber and consists mainly of cellulose. The most dominant degradation process of such canvases is the depolymerization of cellulose by hydrolysis, which in turn influences their mechanical strength ({% cite 'Timar-Balazsy and Eastop 1998' %}). In 1939, Staudinger and Reinecke investigated a potential correlation between aging, cellulose depolymerization, and the mechanical strength of historical canvas ({% cite 'Staudinger and Reinecke 1939' %}). However, this correlation has so far not been experimentally proven. For paper, in contrast, a link between the mechanical properties and the degree of cellulose depolymerization has been found ({% cite 'Zou et al. 1994' %}).
+Flax is frequently used for the canvases of historical paintings. It is a natural fiber and consists mainly of cellulose. The most dominant degradation process of such canvases is the depolymerization of cellulose by hydrolysis, which in turn influences their mechanical strength ({% cite 'Timar-Balazsy and Eastop 1998' %}). In 1939, Staudinger and Reinecke investigated a potential correlation between aging, cellulose depolymerization, and the mechanical strength of historical canvas ({% cite 'Staudinger and Reinecke 1939' %}). However, so far this correlation has not been experimentally proven. For paper, in contrast, a link between the mechanical properties and the degree of cellulose depolymerization has been found ({% cite 'Zou et al. 1994' %}).
 
 In textile engineering. the tensile strength of fabrics is determined by using standard protocols that require a minimum length of 200 mm; for the testing of yarns, a minimum length of 250 mm is needed. Those requirements limit their application to conservation research. If large amounts of sample material are available, such as for artificially aged canvas, it is possible to determine the strength of the material using methods such as the standard tensile test method on fabric or yarn, which gives a maximum tensile strength value ({% cite 'Reumann 2000' %}), but to date no direct correlation between the age-related chemical alterations of the cellulose molecular constitution and the physical consequences for the fabric has been established ({% cite 'Young 2005' %}). The reason for this is the lack of methods to investigate original canvases. Thus, the determination of the degree of cellulose depolymerization by viscometry was until now the only method available to investigate the constitution of original canvas ({% cite 'Stoll and Fengel 1981' %}). However, the measured degree of polymerization is difficult to assess with respect to the aging process and the mechanical properties. Therefore, a technique for measuring the mechanical properties on smaller components of a canvas such as yarns or fibers is needed.
 
-Yarns are structures comprised of fibers, and a yarn’s geometry is determined by the fibers’ diameter, gradient angle, density, and the homogeneity of the material ({% cite 'Peirce 1937' %}). It is likely that the strong influence the fabric geometry has on the measurements may prevent a direct correlation of the age with tensile strength as determined by the above-mentioned standard methodology. It seems conceivable that the thinnest site of the sample ruptures first, or that thinner single fibers are displaced from longer single fibers during the measurement. Thus, we conclude that to determine a correlation between the degree of polymerization of cellulose and the mechanical properties a novel technique for measuring the tensile strength is needed—one that greatly excludes the influence of the textile geometry on the measurement.
+Yarns are structures composed of fibers, and a yarn’s geometry is determined by the fibers’ diameter, gradient angle, density, and homogeneity of the material ({% cite 'Peirce 1937' %}). It is likely that the strong influence the fabric geometry has on the measurements may prevent a direct correlation of the age with tensile strength as determined by the above-mentioned standard methodology. It seems conceivable that the thinnest site of the sample ruptures first, or that thinner single fibers are displaced from longer single fibers during the measurement. Thus, we conclude that to determine a correlation between the degree of polymerization of cellulose and the mechanical properties, a novel technique for measuring the tensile strength is needed—one that largely excludes the influence of the textile geometry on the measurement.
 
-To date, three standard methods are used to determine the strength of cellulosic fiber material: (1) the band-pulling method on plain textile structures ({% cite 'DIN 1999' %}); (2) the determination of the maximal tensile strength on single fibers ({% cite 'DIN 2009' %}); and (3) the determination of the maximal tensile strength on staple fibers ({% cite 'DIN 1996' %}). However, as already mentioned, none of these standard techniques fulfills the requirements applicable to original canvas samples. The comparison of the degree of cellulose polymerization with the maximum tensile strength of artificially aged linen (flax fabric), measured with the band-pulling method on plain-weave fabrics, did not yield a correlation ({% cite 'Von Reden 2018' %}). In this study, we propose that the influence of the fabric geometry during these measurements prevents the resulting values from faithfully resembling the molecular condition of the cellulose, and that the same applies to the determination of the maximum tensile strength on single yarn.
+To date, three standard methods are used to determine the strength of cellulosic fiber material: (1) the band-pulling method on plain textile structures ({% cite 'DIN 1999' %}); (2) the determination of the maximum tensile strength on single fibers ({% cite 'DIN 2009' %}); and (3) the determination of the maximum tensile strength on staple fibers ({% cite 'DIN 1996' %}). However, as already mentioned, none of these standard techniques fulfills the requirements applicable to original canvas samples. The comparison of the degree of cellulose polymerization with the maximum tensile strength of artificially aged linen (flax fabric), measured with the band-pulling method on plain-weave fabrics, did not yield a correlation ({% cite 'Von Reden 2018' %}). In this study, we propose that the influence of the fabric geometry during these measurements prevents the resulting values from faithfully resembling the molecular condition of the cellulose, and that the same applies to the determination of the maximum tensile strength on single yarn.
 
-In the research field of paper analysis, an alternative method for the analysis of single fiber strength is frequently applied to this problem: the determination of the zero-span tensile strength ({% cite 'TAPPI 2007' %}). The special feature of this method is the fact that the clamping distance is reduced to almost zero, and hence the strength of the fibers is measured at a defined position. In this way, measurement errors arising from the heterogeneity of the material along the overall length of the sample are minimized. In the international literature, the resulting value is named zero-span tensile strength ({% cite 'Henniges and Potthast 2015' %}; {% cite 'Henniges and Potthast 2000' %}). Applying the zero-span tensile strength test method to yarn would represent an important technical advancement.
+In the research field of paper analysis, an alternative method for the analysis of single fiber strength is frequently applied to this problem: the determination of the zero-span tensile strength ({% cite 'TAPPI 2007' %}). The special feature of this method is the fact that the clamping distance is reduced to almost zero, and hence the strength of the fibers is measured at a defined position. In this way, measurement errors arising from the heterogeneity of the material along the overall length of the sample are minimized. In the international literature, the resulting value is called zero-span tensile strength ({% cite 'Henniges and Potthast 2015' %}; {% cite 'Henniges and Potthast 2000' %}). Applying the zero-span tensile strength test method to yarn would represent an important technical advancement.
 
-Previous studies have reported on this topic, but to date no standardized protocol or validation of the method exists ({% cite 'Hackney and Hedley 1984' %}; {% cite 'Leene et al. 1975' %}). Transferring this technique to the conservation of paintings, however, would be highly desirable. The goal of our work was to investigate the applicability of the zero-span tensile strength method to single yarns and to develop a standard protocol. The second aim was to use this technique to study samples derived from original canvas to assess its implementation in conservation research. The overarching question was whether a correlation between the intrinsic viscosity and the maximum tensile strength exists. This study was conducted at the Dresden University of Fine Arts, Germany.
+Previous studies have reported on this topic, but to date no standardized protocol or validation of the method exists ({% cite 'Hackney and Hedley 1984' %}; {% cite 'Leene et al. 1975' %}). Transferring this technique to the conservation of paintings, however, would be highly desirable. The goal of our work was to investigate the applicability of the zero-span tensile strength method to single yarns and to develop a standard protocol. The second aim was to use this technique to study samples derived from original canvas to assess its implementation in conservation research. The overarching question was whether a correlation exists between the intrinsic viscosity and the maximum tensile strength. This study was conducted at Dresden University of Fine Arts, Germany.
 
 ## Methods
 
@@ -50,7 +50,7 @@ Previous studies have reported on this topic, but to date no standardized protoc
 
 The general workflow of this study is as follows: yarn samples were taken from both new and artificially aged fabrics as well as from original canvas paintings. The maximum tensile strength at zero length of single yarn samples was determined using the newly developed method described in more detail below. Then identical sample material was disassembled into single fibers and the intrinsic viscosity (limiting viscosity number) determined.
 
-The existing protocol for the zero-span tensile strength determination of paper was modified for its application to yarn samples, and a standard protocol was developed. The general rules for measuring maximum tensile strength also apply to the zero-span tensile strength. The critical difference between the protocols is the clamping distance. In reality, the clamping distance for determining the zero-span tensile strength is set to 0.1 mm in order to avoid compression of the sample. Here, we used a modified version of a testing machine that was originally developed for the analysis of historical paper ({% cite 'Lichtblau 2007' %}). We used a zwickiLine Z0.5 TS material testing machine equipped with an Xforce precision force sensor (nominal force=500 N), pneumatic sample holders, and an adjustment system for a highly precise arrangement and guidance of the specimens. [Fig. 16.1](#fig-16-1) shows the front view of the four special clamps for the zero-span tensile strength, which are arranged in pairs at a vertical distance of 0.1 mm.
+The existing protocol for the zero-span tensile strength determination of paper was modified for its application to yarn samples, and a standard protocol was developed. The general rules for measuring maximum tensile strength also apply to the zero-span tensile strength. The critical difference between the protocols is the clamping distance. In reality, the clamping distance for determining the zero-span tensile strength is set to 0.1 mm in order to avoid compression of the sample. Here, we used a modified version of a testing machine that was originally developed for the analysis of historical paper ({% cite 'Lichtblau 2007' %}). We used a zwickiLine Z0.5 TS material testing machine equipped with an Xforce precision force sensor (nominal force = 500 N), pneumatic sample holders, and an adjustment system for a highly precise arrangement and guidance of the specimens. [Figure 16.1](#fig-16-1) shows the front view of the four special clamps for the zero-span tensile strength, which are arranged in pairs at a vertical distance of 0.1 mm.
 
 {% figure 'fig-16-1' %}
 
@@ -58,7 +58,7 @@ In order to apply this technology to yarn samples and use it as a standard metho
 
 {% figure 'table-16-1' %}
 
--   Theoretically three different types of samples were conceivable: twisted yarns, untwisted yarns, and single fibers. However, in the case of twisted yarn premature damage of the sample can be excluded. In addition, for this configuration, a maximal correlation of the results with the strength of the canvas is expected.
+-   Theoretically, three different types of samples were conceivable: twisted yarns, untwisted yarns, and single fibers. However, in the case of twisted yarn, premature damage of the sample can be excluded. In addition, for this configuration, a maximal correlation of the results with the strength of the canvas is expected.
 
 -   The minimum sample length was determined considering the following points: The sample length should be as short as possible to (potentially) be applicable to original canvases. Samples needed to be long enough to be reproducibly held by the clamps, which require a 2.1 mm operational distance. Hence, a sample length of 5.0 mm for each sample is necessary for the vertical application.
 
@@ -76,7 +76,7 @@ In order to apply this technology to yarn samples and use it as a standard metho
 
 -   The time effort for the whole experiment should be minimized.
 
-To develop the standard protocol, test measurements were conducted on a new fabric using the above criteria. The use of an identical fabric ensured the comparability of the different settings of the testing machine. The resulting standard protocol as outlined in [table 16.2](#table-16-2), which shows the final parameters that allowed us to fulfill our criteria.
+To develop the standard protocol, test measurements were conducted on a new fabric using the above criteria. The use of an identical fabric ensured the comparability of the different settings of the testing machine. The resulting standard protocol is outlined in [table 16.2](#table-16-2), which shows the final parameters that allowed us to fulfill our criteria.
 
 {% figure 'table-16-1' %}
 
@@ -86,43 +86,43 @@ For conducting a measurement for one canvas, the following steps were performed:
 
     {% figure 'fig-16-2' %}
 
-2.  To obtain a statistically significant result for the tensile strength for one canvas, it was necessary to measure twelve yarn sections with 5 mm length each. From the maximum tensile load measured in newtons, the diameter-normalized maximal tensile strength (*f<sub>H</sub>*) was calculated following *f*<sub>H</sub> = F/Tt with Tt = fineness (in units of tex) in order to compare yarns of different fineness ({% cite 'Reumann 2000' %}).
+2.  To obtain a statistically significant result for the tensile strength for one canvas, it was necessary to measure twelve yarn sections with 5 mm length each. From the maximum tensile load measured in newtons, the diameter-normalized maximal tensile strength (  *f<sub>H</sub>*) was calculated following *f*<sub>H</sub> = F/Tt with Tt = fineness (in units of tex) in order to compare yarns of different fineness ({% cite 'Reumann 2000' %}).
 
 3.  To determine the fineness, the mass was divided by the length of the yarn ({% cite 'Hartwig and Reumann 2000' %}).
 
-4.  For the final data analysis, the highest and the lowest values were excluded, and the average and the corresponding standard deviation were calculated from the remaining 10 values.
+4.  For the final data analysis, the highest and the lowest values were excluded, and the average and the corresponding standard deviation were calculated from the remaining ten values.
 
 ### Determination of the Limiting Viscosity Number (Staudinger Index) Using Capillary Viscometry
 
 The average degree of polymerization has been established in the field of conservation research to describe the degree of decomposition and the molecular condition of cellulose ({% cite 'Stoll and Fengel 1981' %}). The degree of polymerization is calculated based on the experimentally determined limiting viscosity number. However, for this calculation different methods have been described, leading to different results ({% cite 'Stoll and Fengel 1981' %}). Thus, in order to directly compare results from different studies, the standard DIN 54 270 part 1 suggests omitting the calculation of the degree of polymerization and instead using the limiting viscosity number as the reference value ({% cite 'DIN 1976' %}). Just like the degree of polymerization, the limiting viscosity number increases as the chain length of the cellulose molecules increases.
 
-The intrinsic viscosity of all yarn samples was determined using capillary viscometry. This method allows investigation of original sample material as well, since the necessary sample amount is less than 15 mg. All experiments were performed according to the standard DIN 54 270 part 3 ({% cite 'DIN 1977' %}), with minor modifications ({% cite 'Bräunig et al. 2016' %}). The basic principle is as follows: The yarn sample is disassembled into single fibers, then dissolved in alkaline iron tartrate system (in German EWNN<sub>mod(NaCl)</sub>), and the viscosity of the resulting solution is determined using a Micro-Ubbelohde viscometer. The time required for a defined volume of a test liquid to pass a defined distance in a capillary of a known diameter is used to calculate the kinematic viscosity of that liquid. The dissolved cellulose sample is inserted into the viscometer, aspirated, and then the flow time back through the device caused by gravity is measured (twice per sample) with two independent fillings. The result given here is the mean value of the two measurements.
+The intrinsic viscosity of all yarn samples was determined using capillary viscometry. This method allows investigation of original sample material as well, since the necessary sample amount is less than 15 mg. All experiments were performed according to the standard DIN 54 270 part 3 ({% cite 'DIN 1977' %}), with minor modifications ({% cite 'Bräunig et al. 2016' %}). The basic principle is as follows: the yarn sample is disassembled into single fibers, then dissolved in alkaline iron tartrate system (in German EWNN<sub>mod(NaCl)</sub>), and the viscosity of the resulting solution is determined using a Micro-Ubbelohde viscometer. The time required for a defined volume of a test liquid to pass a defined distance in a capillary of a known diameter is used to calculate the kinematic viscosity of that liquid. The dissolved cellulose sample is inserted into the viscometer, aspirated, and then the flow time back through the device caused by gravity is measured (twice per sample) with two independent fillings. The result given here is the mean value of the two measurements.
 
 ### Sample Material and Preparation
 
-Overall, seventeen different flax fabrics were analyzed: one new fabric, with two additional levels of artificial aging, and fourteen canvas samples from original paintings. Artificial aging was achieved by exposure to light in a Xenotest (42 W/m², filter: \< 320 nm, 35°C and 30% RH), followed by a temperature increase (70°C) and cyclically alternating humidity (from 30% to 80% RH over 12 hours). The samples from original paintings—dating from the sixteenth to twentieth centuries—originated from paintings that were processed in the framework of teaching at Dresden University of Fine Arts. The choice of the paintings was driven by the aim of reflecting a broad spectrum of aging. All paintings were mainly untreated and generally had not been stored in a constant climate.
+Overall, seventeen different flax fabrics were analyzed: one new fabric, with two additional levels of artificial aging, and fourteen canvas samples from original paintings. Artificial aging was achieved by exposure to light in a Xenotest (42 W/m², filter: \< 320 nm, 35°C and 30% RH), followed by a temperature increase (70°C) and cyclically alternating humidity (from 30% to 80% RH over twelve hours). The samples from original paintings—dating from the sixteenth to the twentieth century—originated from paintings that were processed in the framework of teaching at Dresden University of Fine Arts. The choice of the paintings was driven by the aim of reflecting a broad spectrum of aging. All paintings were generally untreated and had not been stored in a constant climate.
 
 From the new and artificially aged fabrics, samples of warp and weft were taken from the middle of the fabric. The position and thread direction of the samples from the original canvases differed depending on the condition of each individual painting. For preparation, the samples from the original canvases were soaked in a bath to increase the homogeneity of the starting material. The resulting coloring of the extract showed that dirt, small particles, and (most likely) the sizing could be dissolved. Then the yarns were cut into twelve sections of 5 mm each. To maximize the comparability of the results from the two different methods, identical samples were first used for the tensile strength measurement and then dissolved for the capillary viscometry experiment.
 
 ## Results
 
-The results of the tensile strength measurements confirm that the standard protocol we developed is applicable without any limitation to all yarn samples tested. [Fig. 16.3a](#fig-16-3) shows the average of the diameter-normalized maximum tensile strength (*f<sub>H</sub>* in N/tex) with the corresponding standard deviation for all measured samples. All results for the tensile strength lie between 0.000120 and 0.02744 N/tex. The new fabric before and after artificial aging show the highest values, thus these samples cover the range of weak aging. The samples from the original canvases are found in the range of middle and show strong aging, making it apparent that the artificial aging was not sufficient to reflect the values of the original samples. For the artificially aged fabrics, the warps were generally more stable than the wefts—either those that were unaged or those that had been aged for shorter periods.
+The results of the tensile strength measurements confirm that the standard protocol we developed is applicable without any limitation to all yarn samples tested. [Figure 16.3a](#fig-16-3) shows the average of the diameter-normalized maximum tensile strength (  *f<sub>H</sub>* in N/tex) with the corresponding standard deviation for all measured samples. All results for the tensile strength lie between 0.000120 and 0.02744 N/tex. The new fabric before and after artificial aging shows the highest values, thus these samples cover the range of weak aging. The samples from the original canvases are found in the range of middle and show strong aging, making it apparent that the artificial aging was not sufficient to reflect the values of the original samples. For the artificially aged fabrics, the warps were generally more stable than the wefts—either those that were unaged or those that had been aged for shorter periods.
 
 {% figure 'fig-16-3' %}
 
-For the historical yarn samples from the nineteenth and twentieth centuries (H1U20–H10K19) the strength decreases with increasing age. In the region with the lowest strength, measured on the samples from the sixteenth to eighteenth centuries, the strength does not correlate with the age. Probably, the strength of these samples is more strongly influenced by further factors, such as aging conditions, pretreatment, and painting technique.
+For the historical yarn samples from the nineteenth and twentieth centuries (H1U20–H10K19), the strength decreases with increasing age. In the region with the lowest strength, measured on the samples from the sixteenth to eighteenth century, the strength does not correlate with the age. Probably, the strength of these samples is more strongly influenced by further factors, such as aging conditions, pretreatment, and painting technique.
 
-[Fig. 16.3b](#fig-16-3) shows the results of the capillary viscometry experiments. The analyzed yarn samples cover a broad spectrum of limiting viscosity numbers (GVZ in units of ml/g), which, in contrast to the diameter-normalized maximum tensile strength values (*f<sub>H</sub>*; see [fig. 16.3a](#fig-16-3)), show a smaller gap between the artificially and the historically aged samples. Overall, the values lie between 250 and 1976 ml/g. High values were obtained from the new and artificially aged samples. In line with the results of tensile strength (see [fig. 16.3a](#fig-16-3)), the warps show higher values than the wefts. This phenomenon can be explained by the different yarn quality of the two groups. While the warps in these samples consisted of doubling folded yarns with long single fibers, the wefts were yarns with short single fibers.
+[Figure 16.3b](#fig-16-3) shows the results of the capillary viscometry experiments. The analyzed yarn samples cover a broad spectrum of limiting viscosity numbers (GVZ in units of ml/g), which, in contrast to the diameter-normalized maximum tensile strength values (  *f<sub>H</sub>*; see [fig. 16.3a](#fig-16-3)), show a smaller gap between the artificially and historically aged samples. Overall, the values lie between 250 and 1976 ml/g. High values were obtained from the new and artificially aged samples. In line with the results of tensile strength (see [fig. 16.3a](#fig-16-3)), the warps show higher values than the wefts. This phenomenon can be explained by the different yarn quality of the two groups. While the warps in these samples consisted of doubling folded yarns with long single fibers, the wefts were yarns with short single fibers.
 
 Surprisingly, we observed an anomaly for the artificially aged wefts that is consistent throughout both methods: the wefts that were aged longer show slightly higher values than wefts aged for shorter periods. Since this phenomenon appears with both methods, the result seems to be sample specific. This anomaly could be caused by the inhomogeneity of the material. In comparison, the historical samples generally show lower values. For technical reasons, the viscosity measurements were conducted at two different temperatures (18°C and 19°C, shown in [fig. 16.3b](#fig-16-3) in light and dark gray, respectively).
 
-The correlation of the data determined by the two different methods is plotted in [fig. 16.4](#fig-16-4): the degree of polymerization of the cellulose, represented by the limiting viscosity number (GVZ), and the strength of the tested yarn samples (*f<sub>H</sub>*), measured by our newly developed protocol. Due to the strong dependence of the viscosity measurement on temperature, the experiments at 18°C and 19°C are plotted separately. For both temperatures, a clear correlation of the limiting viscosity number with the diameter-normalized maximum tensile strength can be found. The data points can be grouped into two separate populations: low strength (*f<sub>H</sub>* \< 0.008 N/tex), consisting of the naturally aged samples, and high strength (*f<sub>H</sub>* \> 0.017 N/tex), consisting of new and artificially aged samples. In summary, a linear correlation is observed over the whole data set.
+The correlation of the data determined by the two different methods is plotted in [figure 16.4](#fig-16-4): the degree of polymerization of the cellulose, represented by the limiting viscosity number (GVZ), and the strength of the tested yarn samples (  *f<sub>H</sub>*), measured by our newly developed protocol. Due to the strong dependence of the viscosity measurement on temperature, the experiments at 18°C and 19°C are plotted separately. For both temperatures, a clear correlation of the limiting viscosity number with the diameter-normalized maximum tensile strength can be found. The data points can be grouped into two separate populations: low strength (  *f<sub>H</sub>* \< 0.008 N/tex), consisting of the naturally aged samples, and high strength (  *f<sub>H</sub>* \> 0.017 N/tex), consisting of new and artificially aged samples. In summary, a linear correlation is observed over the whole data set.
 
 {% figure 'fig-16-4' %}
 
-In contrast to capillary viscometry, the tensile strength of the yarn measured with zero-span distance still could be influenced by yarn geometry. In addition, for the historic samples, remaining material such as a binding agent may influence the tensile strength. For the low values, the results of both methods do not completely align with the dating of the samples. In other words, a canvas from the sixteenth century may show a higher tensile strength than a canvas from the seventeenth century. This shows that the dating by itself is not sufficient to conclude on the tensile strength. The pretreatments of the canvases and the respective conditions under which the paintings were stored may have a significant influence on their material state.
+In contrast to capillary viscometry, the tensile strength of the yarn measured with zero-span distance still could be influenced by yarn geometry. In addition, for the historical samples, remaining material such as a binding agent may influence the tensile strength. For the low values, the results of both methods do not completely align with the dating of the samples. In other words, a canvas from the sixteenth century may show a higher tensile strength than a canvas from the seventeenth century. This shows that the dating by itself is not sufficient to draw a conclusion on the tensile strength. The pretreatments of the canvases and the respective conditions under which the paintings were stored may have a significant influence on their material state.
 
-Comparing our tensile strength results and the empiric impression of the canvases reveals an interesting finding. Generally, the lowest values for intrinsic viscosity and strength reflected the empiric impression of the fragility of the corresponding canvases. In these cases, the canvases were obviously brittle. In contrast, within the major range of the values, for all nonaged and aged samples, no correlation between the values and the empiric impression could be observed. There are no explicit empirically identifiable characteristics that point toward a medium or even a higher loss of tensile strength. An empiric evaluation of the canvas stability is only possible when it already reached a state of fragility that leads to breaking or cracking at low application of a force, such as during handling. These results suggest that an empiric assessment as a basis for a conservational treatment has only limited scope and that an exact method to determine the stability of the canvas is needed.
+Comparing our tensile strength results and the empirical impression of the canvases reveals an interesting finding. Generally, the lowest values for intrinsic viscosity and strength reflected the empirical impression of the fragility of the corresponding canvases. In these cases, the canvases were obviously brittle. In contrast, within the major range of the values, for all nonaged and aged samples, no correlation between the values and the empirical impression could be observed. There are no explicit empirically identifiable characteristics that point toward a medium or even a higher loss of tensile strength. An empirical evaluation of the canvas stability is only possible when it already reached a state of fragility that leads to breaking or cracking at low application of a force, such as during handling. These results suggest that an empirical assessment as a basis for a conservational treatment has only limited scope and that an exact method to determine the stability of the canvas is needed.
 
 ## Conclusion and Outlook
 
